# kkube-rs-platform

./: Cargo.toml  DEV.md  Makefile  log4rs.yaml
crd/: aws-account.crd.yaml
demo/aws-account/: my-account.yaml
demo/hello-world/: service.yaml
src/: crdgen.rs  lib.rs  main.rs
src/controllers/: mod.rs
src/controllers/aws_account/: controller.rs  mod.rs  spec.rs
