[package]
name = "platform"
version = "0.1.0"
edition = "2021"
default-run = "platform"

[[bin]]
doc = false
name = "platform"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/bin/crdgen.rs"

[lib]
name = "platform"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
tokio-util = "0.7.8"
anyhow = "1.0.75"
futures = "0.3.28"
jsonpath_lib = "0.3.0"
log4rs = "1.2.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "0.8.13"
backoff = "0.4.0"
tracing = "0.1.37"
garde = "0.14.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.48"
